Fix header size on mobile

--- a/id-creator/src/component/util/Layout/HeaderLayout.css
+++ b/id-creator/src/component/util/Layout/HeaderLayout.css
@@ -16,7 +16,6 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex:1 1 45px;
 }
 
 .site-header-content{
